--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "en",
-  "appTitle": "Parkinson Rehabilitation Assistant",
+  "appTitle": "Kineo",
   "@appTitle": {
     "description": "Application title"
   },
