--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "zh",
-  "appTitle": "帕金森康复助手",
+  "appTitle": "Kineo",
   "selectTraining": "请选择您要进行的训练",
   "tremorTest": "手部震颤测试",
   "gaitAssist": "步态节律辅助",
