--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -5,7 +5,7 @@
   "tremorTest": "手部震颤测试",
   "tremorTestTitle": "手部震颤测试",
   "tremorTestInstruction": "请将手机握在手中，保持手臂静止30秒",
-  "remainingTime": "剩余时间: {time} 秒",
+  "remainingTime": "剩余 {time} 秒",
   "@remainingTime": {
     "placeholders": {
       "time": {
@@ -60,5 +60,18 @@
   "portuguese": "Português",
   "italian": "Italiano",
   "russian": "Русский",
-  "arabic": "العربية"
+  "arabic": "العربية",
+  "realtimeWaveform": "实时波形",
+  "tremorSeverity": "震颤程度",
+  "tremorFrequency": "震颤频率",
+  "avgAmplitude": "平均振幅",
+  "maxAmp": "最大振幅",
+  "variability": "变异度",
+  "sampleRate": "采样率",
+  "dataPoints": "数据点",
+  "severityNormal": "正常",
+  "severityMild": "轻度",
+  "severityModerate": "中度",
+  "severityModerateSevere": "中重度",
+  "severitySevere": "重度"
 }
