Optimize UI for login page
-polish UI: adjust padding and colors
-revamp home screen layout

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -48,7 +48,7 @@
   "sensorPermissionRequired": "يتطلب إذن المستشعر لإجراء الاختبار",
   "language": "اللغة",
   "changeLanguage": "تغيير اللغة",
-  "selectLanguage": "اختر اللغة",
+  "selectLanguage": "اللغة",
   "english": "English",
   "chinese": "简体中文",
   "chineseTraditional": "繁體中文",
@@ -75,7 +75,8 @@
   "severityModerateSevere": "متوسط-شديد",
   "severitySevere": "شديد",
   "appSubtitle": "مساعدك الشخصي لمرض باركنسون لتتبع وتحليل الحركة",
-  "signInWithGoogle": "تسجيل الدخول باستخدام Google",
+  "signInWithGoogle": "تسجيل الدخول بـ Google",
+  "signingIn": "جارٍ تسجيل الدخول...",
   "privacyNotice": "من خلال تسجيل الدخول، فإنك توافق على شروط الخدمة وسياسة الخصوصية الخاصة بنا",
   "loginError": "خطأ في تسجيل الدخول",
   "confirm": "تأكيد",
