--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -48,7 +48,7 @@
   "sensorPermissionRequired": "Sensorberechtigung erforderlich, um den Test durchzuführen",
   "language": "Sprache",
   "changeLanguage": "Sprache Ändern",
-  "selectLanguage": "Sprache Auswählen",
+  "selectLanguage": "Sprache",
   "english": "English",
   "chinese": "简体中文",
   "chineseTraditional": "繁體中文",
@@ -76,6 +76,7 @@
   "severitySevere": "Schwer",
   "appSubtitle": "Ihr persönlicher Parkinson-Assistent für Bewegungsverfolgung und -analyse",
   "signInWithGoogle": "Mit Google anmelden",
+  "signingIn": "Anmeldung...",
   "privacyNotice": "Mit der Anmeldung stimmen Sie unseren Nutzungsbedingungen und Datenschutzrichtlinien zu",
   "loginError": "Anmeldefehler",
   "confirm": "Bestätigen",
