--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -48,7 +48,7 @@
   "sensorPermissionRequired": "Se requiere permiso de sensor para realizar la prueba",
   "language": "Idioma",
   "changeLanguage": "Cambiar Idioma",
-  "selectLanguage": "Seleccionar Idioma",
+  "selectLanguage": "Idioma",
   "english": "English",
   "chinese": "简体中文",
   "chineseTraditional": "繁體中文",
@@ -75,7 +75,8 @@
   "severityModerateSevere": "Mod-Severo",
   "severitySevere": "Severo",
   "appSubtitle": "Tu asistente personal de Parkinson para seguimiento y análisis de movimientos",
-  "signInWithGoogle": "Iniciar sesión con Google",
+  "signInWithGoogle": "Iniciar con Google",
+  "signingIn": "Iniciando...",
   "privacyNotice": "Al iniciar sesión, aceptas nuestros Términos de Servicio y Política de Privacidad",
   "loginError": "Error de Inicio de Sesión",
   "confirm": "Confirmar",
