--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -48,7 +48,7 @@
   "sensorPermissionRequired": "Autorisation de capteur requise pour effectuer le test",
   "language": "Langue",
   "changeLanguage": "Changer de Langue",
-  "selectLanguage": "Sélectionner la Langue",
+  "selectLanguage": "Langue",
   "english": "English",
   "chinese": "简体中文",
   "chineseTraditional": "繁體中文",
@@ -75,7 +75,8 @@
   "severityModerateSevere": "Mod-Sévère",
   "severitySevere": "Sévère",
   "appSubtitle": "Votre assistant Parkinson personnel pour le suivi et l'analyse des mouvements",
-  "signInWithGoogle": "Se connecter avec Google",
+  "signInWithGoogle": "Connexion Google",
+  "signingIn": "Connexion...",
   "privacyNotice": "En vous connectant, vous acceptez nos Conditions d'utilisation et notre Politique de confidentialité",
   "loginError": "Erreur de Connexion",
   "confirm": "Confirmer",
