--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -48,7 +48,7 @@
   "sensorPermissionRequired": "テストを実施するにはセンサーの許可が必要です",
   "language": "言語",
   "changeLanguage": "言語を変更",
-  "selectLanguage": "言語を選択",
+  "selectLanguage": "言語",
   "english": "English",
   "chinese": "简体中文",
   "chineseTraditional": "繁體中文",
@@ -75,7 +75,8 @@
   "severityModerateSevere": "中重度",
   "severitySevere": "重度",
   "appSubtitle": "パーキンソン病の動作追跡と分析のためのパーソナルアシスタント",
-  "signInWithGoogle": "Googleでサインイン",
+  "signInWithGoogle": "Google でログイン",
+  "signingIn": "ログイン中...",
   "privacyNotice": "サインインすることで、利用規約とプライバシーポリシーに同意したことになります",
   "loginError": "ログインエラー",
   "confirm": "確認",
