--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -48,7 +48,7 @@
   "sensorPermissionRequired": "테스트를 수행하려면 센서 권한이 필요합니다",
   "language": "언어",
   "changeLanguage": "언어 변경",
-  "selectLanguage": "언어 선택",
+  "selectLanguage": "언어",
   "english": "English",
   "chinese": "简体中文",
   "chineseTraditional": "繁體中文",
@@ -76,6 +76,7 @@
   "severitySevere": "심각",
   "appSubtitle": "움직임 추적 및 분석을 위한 파킨슨 개인 도우미",
   "signInWithGoogle": "Google로 로그인",
+  "signingIn": "로그인 중...",
   "privacyNotice": "로그인하면 서비스 약관 및 개인정보 보호정책에 동의하게 됩니다",
   "loginError": "로그인 오류",
   "confirm": "확인",
