--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -48,7 +48,7 @@
   "sensorPermissionRequired": "Permissão de sensor necessária para realizar o teste",
   "language": "Idioma",
   "changeLanguage": "Alterar Idioma",
-  "selectLanguage": "Selecionar Idioma",
+  "selectLanguage": "Idioma",
   "english": "English",
   "chinese": "简体中文",
   "chineseTraditional": "繁體中文",
@@ -75,7 +75,8 @@
   "severityModerateSevere": "Mod-Grave",
   "severitySevere": "Grave",
   "appSubtitle": "Seu assistente pessoal de Parkinson para rastreamento e análise de movimentos",
-  "signInWithGoogle": "Entrar com o Google",
+  "signInWithGoogle": "Entrar com Google",
+  "signingIn": "Entrando...",
   "privacyNotice": "Ao entrar, você concorda com nossos Termos de Serviço e Política de Privacidade",
   "loginError": "Erro de Login",
   "confirm": "Confirmar",
