--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -48,7 +48,7 @@
   "sensorPermissionRequired": "Для выполнения теста требуется разрешение датчика",
   "language": "Язык",
   "changeLanguage": "Изменить Язык",
-  "selectLanguage": "Выбрать Язык",
+  "selectLanguage": "Язык",
   "english": "English",
   "chinese": "简体中文",
   "chineseTraditional": "繁體中文",
@@ -76,6 +76,7 @@
   "severitySevere": "Тяжело",
   "appSubtitle": "Ваш персональный помощник при болезни Паркинсона для отслеживания и анализа движений",
   "signInWithGoogle": "Войти через Google",
+  "signingIn": "Вход...",
   "privacyNotice": "Входя, вы соглашаетесь с нашими Условиями обслуживания и Политикой конфиденциальности",
   "loginError": "Ошибка Входа",
   "confirm": "Подтвердить",
