--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -48,7 +48,7 @@
   "sensorPermissionRequired": "需要传感器权限才能进行测试",
   "language": "语言",
   "changeLanguage": "切换语言",
-  "selectLanguage": "选择语言",
+  "selectLanguage": "语言",
   "english": "English",
   "chinese": "简体中文",
   "chineseTraditional": "繁體中文",
@@ -75,7 +75,8 @@
   "severityModerateSevere": "中重度",
   "severitySevere": "重度",
   "appSubtitle": "您的帕金森运动追踪与分析助手",
-  "signInWithGoogle": "使用 Google 账号登录",
+  "signInWithGoogle": "使用 Google 登录",
+  "signingIn": "正在登录...",
   "privacyNotice": "登录即表示您同意我们的服务条款和隐私政策",
   "loginError": "登录错误",
   "confirm": "确认",
