--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -48,7 +48,7 @@
   "sensorPermissionRequired": "Autorizzazione sensore richiesta per eseguire il test",
   "language": "Lingua",
   "changeLanguage": "Cambia Lingua",
-  "selectLanguage": "Seleziona Lingua",
+  "selectLanguage": "Lingua",
   "english": "English",
   "chinese": "简体中文",
   "chineseTraditional": "繁體中文",
@@ -76,6 +76,7 @@
   "severitySevere": "Grave",
   "appSubtitle": "Il tuo assistente personale per il Parkinson per il monitoraggio e l'analisi dei movimenti",
   "signInWithGoogle": "Accedi con Google",
+  "signingIn": "Accesso...",
   "privacyNotice": "Accedendo, accetti i nostri Termini di servizio e l'Informativa sulla privacy",
   "loginError": "Errore di Accesso",
   "confirm": "Conferma",
