--- a/lib/l10n/app_zh_TW.arb
+++ b/lib/l10n/app_zh_TW.arb
@@ -48,7 +48,7 @@
   "sensorPermissionRequired": "需要感測器權限才能進行測試",
   "language": "語言",
   "changeLanguage": "切換語言",
-  "selectLanguage": "選擇語言",
+  "selectLanguage": "語言",
   "english": "English",
   "chinese": "简体中文",
   "chineseTraditional": "繁體中文",
@@ -75,7 +75,8 @@
   "severityModerateSevere": "中重度",
   "severitySevere": "重度",
   "appSubtitle": "您的帕金森運動追蹤與分析助手",
-  "signInWithGoogle": "使用 Google 帳號登入",
+  "signInWithGoogle": "使用 Google 登入",
+  "signingIn": "正在登入...",
   "privacyNotice": "登入即表示您同意我們的服務條款和隱私政策",
   "loginError": "登入錯誤",
   "confirm": "確認",
